@@ -1,3 +1,7 @@
+2007-06-20  Sven Neumann  <sven@gimp.org>
+
+	* app/base/tile-pyramid.[ch]: documentation.
+
 2007-06-21  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/autocrop.c (autocrop): fixed an issue with the
